--- a/slides/index.html
+++ b/slides/index.html
@@ -172,25 +172,6 @@ Each of the splines I showed you earlier are all generated from the same basis f
 
 Fitting a GAM to data involves finding the weights for the basis functions that produce a spline that fits the data best, subject to some constraints to avoid over fitting
 
-&lt;!--
----
-
-# Practically
-
-
-```r
-m &lt;- mgcv::gam(response ~ s(time, k = 20), # smooth of time
-    data = df,                             # where to find the variables
-    family = gaussian(),                   # conditional distribution of Y
-    method = "REML")                       # smothing parameter method
-```
-
-❗Critically, model things forwards in time &amp;mdash; not age ❗
-
-See the `.R` scripts in the Github repo for the detail
-
---&gt;
-
 ---
 class: inverse middle center subsection
 
@@ -206,7 +187,8 @@ background-size: auto
 .row[
 
 .col-7[
-Mostly model the mean
+
+We mostly model the mean
 
 But other parameters are important
 
