--- a/slides/index.html
+++ b/slides/index.html
@@ -467,9 +467,11 @@ class: inverse middle center subsection
 
 # Copulas
 
-Function representing a joint distribution as a mapping from the CDFs of its marginals
+Copula distributional GAM
 
-Defines a general way to think about dependence between random variables
+Copulas bind two models/distributions together
+
+Define a general way to think about dependence between random variables
 
 Starting to be used in ecology:
 
