missing a link to source of sediment core image

--- a/slides/index.html
+++ b/slides/index.html
@@ -103,6 +103,10 @@ Approaching data from the point of view of modelling process in our systems stat
 
 Estimate quantities of interest &amp; quantify their uncertainty
 
+.footnote[
+    Image: Hannes Grobe, [CC BY 3.0](https://creativecommons.org/licenses/by/3.0), via Wikimedia Commons
+]
+
 ???
 
 We all know palaeo data are challenging to analyse, for a whole host of reasons &amp; they don't play well with formal statistical time series methods
